--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -16,7 +16,7 @@
   border: none;
   background-color: transparent;
 
-  z-index: 2;
+  z-index: 3;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -44,6 +44,7 @@
 
 .menu-container {
   background-color: $primary-bgc;
+  z-index: 2;
 
   @media screen and (max-width: 767px) {
     display: none;
